[package]
name = "memstore"
version = "0.2.0"
edition = "2018"
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An in-memory implementation of the `async-raft::RaftStorage` trait."
license = "MIT/Apache-2.0"
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
documentation = "https://docs.rs/memstore"
keywords = ["raft", "consensus", "data-storage"]
homepage = "https://github.com/async-raft/async-raft"
repository = "https://github.com/async-raft/async-raft"
readme = "README.md"

[dependencies]
anyhow = "1"
async-raft = { version="0.6", path="../async-raft" }
serde = { version="1", features=["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version="1", default-features=false, features=["sync"] }
tracing = "0.1.17"
tracing-futures = "0.2.4"

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
